# deep-learning-rag-agent

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: architecture.md  checklist.md
examples/: sample_chunk.json
src/rag_agent/: config.py
src/rag_agent/agent/: graph.py  nodes.py  prompts.py  state.py
src/rag_agent/corpus/: chunker.py  ingest.py
src/rag_agent/ui/: app.py
tests/: test_vectorstore.py
